# cmake-openeye

./: .gitignore  CMakeLists.txt  FindOpenEye.cmake  FindOpenEyePython.cmake  OpenEyeSWIG.cmake  README.md
.github/workflows/: test.yml
docs/bugs/: 2026-04-27-oemolpotential-shared-wheel-missing-version-symbols.md
tests/: CMakeLists.txt  CMakePresets.json  test_all_libraries.cpp  test_find_openeye_python.cmake  test_oe_dir_variable.cmake  test_oebio.cpp  test_oechem.cpp  test_oedepict.cpp  test_oeff.cpp  test_oegraphsim.cpp  test_oegrid.cpp  test_oehermite.cpp  test_oeiupac.cpp  test_oemath.cpp  test_oemedchem.cpp  test_oemmff.cpp  test_oemolpotential.cpp  test_oeomega2.cpp  test_oeopt.cpp  test_oeplatform.cpp  test_oequacpac.cpp  test_oeshape.cpp  test_oesheffield.cpp  test_oesitehopper.cpp  test_oespicoli.cpp  test_oespruce.cpp  test_oesystem.cpp  test_oeszybki.cpp  test_oezap.cpp  test_optional_target_closure.cmake  test_runtime_lib_dir_shared.cmake  test_sdk_major.cmake  test_sdk_version_fallbacks.cmake  test_target_assertions.cmake
tests/abi3_fixture/: CMakeLists.txt  abi3_fixture.cpp  abi3_fixture.h  abi3_fixture.i  check_abi3_imports.py
